--- a/src/App.scss
+++ b/src/App.scss
@@ -13,5 +13,66 @@ code {
 }
 
 .app-container{
-  
+  .login-container{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    .title{
+      text-align: center;
+      font-size: 23px;
+      font-weight: 600;
+      padding-top: 30px;
+    }
+    .text{
+      font-weight: 600;
+      padding-bottom: 5px;
+    }
+    input{
+      padding:12px 5px ;
+      outline: none;
+      margin-bottom: 10px;
+      border: #1618230f;
+      background-color: #1618230f;
+      border-radius: 3px;
+      width: 100%;
+
+      &:hover{
+        background-color: #dedede;
+
+      }
+    }
+    .input-2{
+      position: relative;
+      i{
+        cursor: pointer;
+        position: absolute;
+        top: 17px;
+        right: 10px;
+      }
+    }
+    button{
+      margin-top: 15px;
+      padding: 10px;
+      border-radius: 3px;
+      outline: none;
+      border: none;
+      &.active{
+        background-color: #fe2c55;
+        color: white;
+      }
+    }
+
+    button[disabled=disabled],button:disabled{
+      cursor: not-allowed;
+    }
+
+    .back{
+      display: inline-block;
+      text-align: center;
+      margin-top: 20px;
+      cursor: pointer;
+      width: 100px;
+      margin-left: 160px;
+    }
+  }
 }
